Add categories for website

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html lang="en">
-
     <head>
-
         <title>And Away We Go</title>
-
     </head>
-
+    <body>
+        <table>
+            <thead>
+                <tr>
+                    <td> <strong>About me</strong></td>
+                    <td> <strong>Projects</strong></td>
+                    <td> <strong>Memory Ln</strong></td>
+                    <td> <strong>Ponder Corner</strong></td>
+                </tr>
+            </thead>
+        </table>
+    </body>
 </html>
