Create html files for each category and add hred to direct category header to new pages

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <table>
             <thead>
                 <tr>
-                    <td> <strong>About me</strong></td>
-                    <td> <strong>Projects</strong></td>
-                    <td> <strong>Memory Ln</strong></td>
-                    <td> <strong>Ponder Corner</strong></td>
+                    <td> <a href="Aboutme.html"><strong>About me</strong></a></td>
+                    <td> <a href="Project.html"><strong>Projects</strong></a></td>                      
+                    <td> <a href="media.html"><strong>Memory Ln</strong></a></td>
+                    <td> <a href="ponder.html"><strong>Ponder Corner</strong></a></td>                      
                 </tr>
             </thead>
         </table>
