add p tag in head tag

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
-<html lang="en">
+<!DOCTYPE html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title>And Away We Go</title>
+        <p>Welcome to Hieu's Space</p>
     </head>
     <body>
         <table>
             <thead>
                 <tr>
-                    <td> <a href="Aboutme.html"><strong>About me</strong></a></td>
-                    <td> <a href="Project.html"><strong>Projects</strong></a></td>                      
-                    <td> <a href="media.html"><strong>Memory Ln</strong></a></td>
-                    <td> <a href="ponder.html"><strong>Ponder Corner</strong></a></td>                      
+                    <td> <a href="Aboutme.html"><strong>About me</strong></a></td> <br>
+                    <td> <a href="Project.html"><strong>Projects</strong></a></td> <br>                     
+                    <td> <a href="media.html"><strong>Memory Ln</strong></a></td> <br>
+                    <td> <a href="ponder.html"><strong>Ponder Corner</strong></a></td> <br>                     
                 </tr>
             </thead>
         </table>
