Add webpage header and meta tags

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html lang="en">
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="description" content="MechE student personal website">
         <title>And Away We Go</title>
-        <p>Welcome to Hieu's Space</p>
     </head>
     <body>
+        <h1><b>Welcome to Hieu's Space</b></h1>
         <table>
             <thead>
                 <tr>
-                    <td> <a href="Aboutme.html"><strong>About me</strong></a></td> <br>
-                    <td> <a href="Project.html"><strong>Projects</strong></a></td> <br>                     
-                    <td> <a href="media.html"><strong>Memory Ln</strong></a></td> <br>
-                    <td> <a href="ponder.html"><strong>Ponder Corner</strong></a></td> <br>                     
+                    <td> <a href="Aboutme.html"><b>About me</b></a></td> 
+                    <td> <a href="Project.html"><b>Projects</b></a></td>                  
+                    <td> <a href="media.html"><b>Memory Ln</b></a></td> 
+                    <td> <a href="ponder.html"><b>Ponder Corner</b></a></td>                    
                 </tr>
             </thead>
         </table>
