Added crying cat picture and hr tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     </head>
     <body>
         <h1><b>Welcome to Hieu's Space</b></h1>
+        <hr />
+
+        <br />
+
         <table>
             <thead>
                 <tr>
@@ -17,5 +21,8 @@
                 </tr>
             </thead>
         </table>
+
+        <img src="D:\Personal\website_workshop\cryingCat.jpg" alt="no cat here :(" />
+
     </body>
 </html>
