--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </thead>
         </table>
 
-        <img src="D:\Personal\website_workshop\cryingCat.jpg" alt="no cat here :(" />
+        <img src="./cryingCat.jpg" alt="no cat here :(" />
 
     </body>
 </html>
